# lume-torch

./: pyproject.toml
.github/workflows/: test_notebooks.yml  tests.yml
docs/: models.md
examples/: custom_model.ipynb
examples/mlflow_integration/: gp_model-mlflow.ipynb
examples/probabilistic_models/: custom_model_probabilistic.ipynb  gp_model.ipynb  multitask_gp_example.ipynb
examples/torch_models/: torch_model.ipynb  torch_model_extended.ipynb
lume_torch/: base.py  utils.py  variables.py
lume_torch/models/: ensemble.py  gp_model.py  prob_model_base.py  torch_model.py  torch_module.py  utils.py
tests/: conftest.py  test_base.py  test_mlflow_utils.py  test_variables.py
tests/models/: test_fixed_variable_model.py  test_torch_model.py  test_torch_module.py
tests/test_files/california_regression/: torch_model.yml  torch_module.yml  variables.yml
tests/test_files/single_task_gp/: single_task_gp.yml
